feat(model): sync model properties with form model

--- a/projects/editor/src/lib/components/form/form-view/form-view.component.html
+++ b/projects/editor/src/lib/components/form/form-view/form-view.component.html
@@ -1,1 +1,1 @@
-<formly-form [form]="formGroup" [fields]="fields" [model]="form.model" [options]="options"></formly-form>
+<formly-form [form]="formGroup" [fields]="fields" [model]="form.model" [options]="options" (modelChange)="modelChanged.emit()"></formly-form>
