--- a/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
+++ b/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
@@ -6,6 +6,11 @@
 
 .editor-header {
     display: flex;
+    justify-content: space-between;
+}
+
+.editor-header-right {
+    display: flex;
     align-items: center;
 }
 
