--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -2,9 +2,10 @@
 	<lib-sidebar-section
 		[sectionTitle]="'Add Field'">
         <lib-field-category-list
-            *ngFor="let category of editorService.fieldCategories"
+            *ngFor="let category of editorService.fieldCategories; let first = first"
             [category]="category"
-            [formId]="form.id">
+            [formId]="form.id"
+            [isExpanded]="first">
         </lib-field-category-list>
 	</lib-sidebar-section>
 	<lib-sidebar-section [sectionTitle]="'Fields'">
