--- a/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
+++ b/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
@@ -13,7 +13,7 @@ header {
     display: flex;
     align-items: center;
     opacity: 0;
-    transition: 0.2s;
+    transition: 0.2s ease-out;
 }
 
 .options.visible {
