feat(chip-list): add simple mode and hidden options

--- a/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.scss
+++ b/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.scss
@@ -1,3 +1,7 @@
-.tree-item-header-content-right {
-	margin-top: 4px;
+.mat-chip-list {
+    display: inline-block;
+}
+
+mat-form-field {
+    display: block;
 }
