--- a/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
@@ -1,4 +1,4 @@
-<div class="tree-item-header">
+<div class="tree-item-header" *ngIf="!isSimplified else simplifiedView">
 	<span class="tree-item-header-content-left">
 		<button mat-icon-button [ngStyle]="{'margin-right.px': treeLevelPadding}" [matMenuTriggerFor]="optionsMenu" [disabled]="!hasOptions">
 			<mat-icon>more_vert</mat-icon>
@@ -17,31 +17,40 @@
 		<span>:</span>
 	</span>
 	
-	
 	<div class="tree-item-header-content-right">
-		<mat-form-field class="form-field" appearance="outline">
-			<mat-chip-list #chipList>
-				<mat-chip *ngFor="let option of selectedOptions"
-						  selectable
-						  [removable]="isRemovable(option)"
-						  (removed)="onRemove(option)">
-					{{option}}
-					<mat-icon *ngIf="isRemovable(option)" matChipRemove>cancel</mat-icon>
-				</mat-chip>
-				<input #input
-					   [formControl]="formControl"
-					   [placeholder]="'start typing...'"
-					   [matAutocomplete]="autoComplete"
-					   [matChipInputFor]="chipList"
-					   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-					   (matChipInputTokenEnd)="onAdd($event)">
-			</mat-chip-list>
-			<mat-autocomplete #autoComplete="matAutocomplete" (optionSelected)="onSelected($event)">
-				<mat-option *ngFor="let option of filteredOptions | async"
-							[value]="option">
-					{{option}}
-				</mat-option>
-			</mat-autocomplete>
-		</mat-form-field>
+        <ng-container [ngTemplateOutlet]="formField" [ngTemplateOutletContext]="{ appearance: 'outline' }"></ng-container>
 	</div>
 </div>
+
+<ng-template #simplifiedView>
+    <ng-container [ngTemplateOutlet]="formField" [ngTemplateOutletContext]="{ showLabel: true }"></ng-container>
+</ng-template>
+
+<ng-template #formField let-appearance="appearance" let-showLabel="showLabel">
+    <mat-form-field [appearance]="appearance">
+        <mat-label *ngIf="showLabel">{{ property.name ? property.name : property.key }}</mat-label>
+        <mat-chip-list #chipList>
+            <ng-container *ngFor="let option of selectedOptions">
+                <mat-chip *ngIf="!isHidden(option)"
+                            selectable
+                            (removed)="onRemove(option)">
+                    {{option}}
+                    <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+            </ng-container>
+            <input #input
+                    [formControl]="formControl"
+                    [placeholder]="'start typing...'"
+                    [matAutocomplete]="autoComplete"
+                    [matChipInputFor]="chipList"
+                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    (matChipInputTokenEnd)="onAdd($event)">
+        </mat-chip-list>
+        <mat-autocomplete #autoComplete="matAutocomplete" (optionSelected)="onSelected($event)">
+            <mat-option *ngFor="let option of filteredOptions | async"
+                        [value]="option">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</ng-template>
