feat(drag-drop): add wip logic

--- a/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
@@ -3,6 +3,7 @@
     [ngClass]="{ 'edit-mode': editorService.isEditMode }"
     cdkDropList
     [cdkDropListOrientation]="dropListOrientation"
+    [cdkDropListSortingDisabled]="isSortingDisabled"
     [cdkDropListEnterPredicate]="canEnter"
     [cdkDropListConnectedTo]="connectedTo"
     [cdkDropListData]="field"
