feat(input-property): add abilty to output raw value

--- a/projects/editor/src/lib/components/property/array-property/array-property.component.html
+++ b/projects/editor/src/lib/components/property/array-property/array-property.component.html
@@ -56,7 +56,7 @@
                 (remove)="onRemoveChild(i)"
                 (valueChanged)="onValueChanged()">
             </lib-property>
-            <hr class="divider" *ngIf="isSimplified && !last">
+            <mat-divider *ngIf="isSimplified && !last"></mat-divider>
         </ng-container>
     </ng-container>
 </ng-template>
