--- a/projects/editor/src/lib/components/property/array-property/array-property.component.scss
+++ b/projects/editor/src/lib/components/property/array-property/array-property.component.scss
@@ -18,8 +18,6 @@
     box-sizing: border-box;
 }
 
-.divider {
-    width: 25%;
-    opacity: 0.5;
-    margin: 16px auto;
+mat-divider {
+    margin: 16px 0;
 }
