--- a/projects/editor/src/lib/components/property/property.component.html
+++ b/projects/editor/src/lib/components/property/property.component.html
@@ -53,7 +53,7 @@
     <ng-template #inputProperty>
         <lib-input-property
             [treeLevel]="treeLevel"
-            [property]="property"
+            [property]="propertyService.getAsInputProperty(property)"
             [target]="target"
             [isSimplified]="isSimplified"
             (keyChanged)="onKeyChanged($event, property)"
